Fixed line height when wrapping expressions

--- a/static/katex.less
+++ b/static/katex.less
@@ -16,7 +16,7 @@
 
 .katex {
     font: "Bariol Light";
-    line-height: 1.2;
+    line-height: 3;
 
     // Protect elements inside .katex from inheriting text-indent.
     text-indent: 0;
